<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bolin</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="olinmedeiros@gmail.com">Zolada</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>cg_interfaces</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclpy</build_depend>
  <build_depend>cg_interfaces</build_depend>
  
  <depend>rclcpp</depend> 
  <depend>std_msgs</depend> 
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>